<resources>


    <!-- Strings para activity_main.xml Inicio -->
    <string name="app_name">Veterinaria Vet Care</string>
    <string name="main_btn_registro">Registrar</string>
    <string name="main_btn_consulta">Consultar</string>
    <string name="main_btn_reporte_consultas">Reporte Consultas</string>
    <!-- Strings para activity_main.xml Fin -->


    <!-- Strings para activity_seleccion.xmll Inicio -->
    <string-array name="registro_spn_opciones">
        <item>Mascota</item>
        <item>Veterinario</item>
        <item>Consulta</item>
    </string-array>
    <string name="registro_registrar_txt_spinner">Selecciona el tipo de registro que deseas realizar
    </string>
    <string name="registro_consultar_txt_spinner">Selecciona el tipo de consulta que deseas realizar
    </string>
    <string name="registro_btn_continuar">Continuar</string>
    <!-- Strings para activity_seleccion.xmll Fin -->


    <!-- Strings para activity_registro_mascota.xml Inicio -->
    <string name="registro_mascota_txt_titulo">Registro Mascota</string>
    <string name="registro_mascota_hint_nombre">Nombre</string>
    <string name="registro_mascota_txt_sexo">Sexo</string>
    <string name="registro_mascota_txt_sexo_masculino">Masculino</string>
    <string name="registro_mascota_txt_sexo_femenino">Femenino</string>
    <string name="registro_mascota_txt_fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="registro_mascota_txt_padre">Padre</string>
    <string name="registro_mascota_txt_madre">Madre</string>
    <string name="registro_mascota_txt_especie">Especie</string>
    <string name="registro_mascota_txt_raza">Raza</string>
    <string name="registro_mascota_txt_dueno">Dueño</string>
    <string name="registro_mascota_hint_nombre_dueno">Nombre Dueño</string>
    <string name="registro_mascota_hint_apellido_dueno">Apellido Dueño</string>
    <string name="registro_mascota_hint_documento_dueno">Número de Documento Dueño</string>
    <string name="registro_mascota_hint_direccion_dueno">Dirección Dueño</string>
    <string name="registro_mascota_hint_telefono_dueno">Teléfono Dueño</string>
    <string name="registro_mascota_btn_registrar">Registrar</string>
    <string name="registro_mascota_toast_exito">La mascota fue registrada exitosamente</string>
    <string name="registro_mascota_toast_error">Error:</string>
    <string name="registro_mascota_toast_error_carga">Error al cargar algunos datos de la base de
        datos. Por favor intente más tarde.
    </string>
    <string name="registro_mascota_txt_padre_defecto">Desconocido</string>
    <string name="registro_mascota_txt_madre_defecto">Desconocida</string>
    <string name="registro_mascota_txt_ayuda">Selecciona la opción correcta</string>
    <string name="registro_mascota_txt_ayuda_razas">Selecciona una especie primero</string>
    <!-- Strings para activity_registro_mascota.xml Fin -->


    <!-- Strings para activity_registro_veterinario.xml Inicio -->
    <string name="registro_veterinario_txt_titulo">Registro Veterinario</string>
    <string name="registro_veterinario_hint_nombre">Nombre</string>
    <string name="registro_veterinario_hint_apellido">Apellido</string>
    <string name="registro_veterinario_hint_numero_de_documento">Número de Documento</string>
    <string name="registro_veterinario_hint_direccion">Dirección</string>
    <string name="registro_veterinario_hint_telefono">Teléfono</string>
    <string name="registro_veterinario_hint_registro_profesional">Número de Registro Profesional
    </string>
    <string name="registro_veterinario_txt_especialidades">Especialidades Médicas</string>
    <string name="registro_veterinario_txt_especialidades_defecto">Selecciona las opciones que
        correspondan
    </string>
    <string name="registro_veterinario_btn_registrar">Registrar</string>
    <string name="registro_veterinario_toast_exito">El veterinario fue registrado exitosamente
    </string>
    <string name="registro_veterinario_toast_error">Error:</string>
    <!-- String para activity_registro_mascota.xml Fin -->


    <!-- Strings para activity_registro_consulta.xml Inicio -->
    <string name="registro_consulta_txt_titulo">Registro Consulta</string>
    <string name="registro_consulta_txt_mascota">Mascota Atendida</string>
    <string name="registro_consulta_txt_fecha">Fecha</string>
    <string name="registro_consulta_hint_motivo">Motivo</string>
    <string name="registro_consulta_hint_examenes_fisicos">Exámenes Físicos</string>
    <string name="registro_consulta_txt_tratamiento">Tratamiento</string>
    <string name="registro_consulta_txt_tratamiento_dosis">Dosis en mg</string>
    <string name="registro_consulta_txt_tratamiento_frecuencia">Frecuencia en horas</string>
    <string name="registro_consulta_txt_tratamiento_cantidad_dias">Cantidad de días</string>
    <string name="registro_consulta_txt_veterinario">Veterinario</string>
    <string name="registro_consulta_txt_patologia">Patología</string>
    <string name="registro_consulta_txt_enfermedad_cronica">Enfermedad Crónica</string>
    <string name="registro_consulta_btn_registrar">Registrar</string>
    <string name="registro_consulta_toast_exito">La consulta fue registrada exitosamente</string>
    <string name="registro_consulta_toast_error">Error:</string>
    <string name="registro_consulta_txt_ayuda">Selecciona la opción correcta</string>
    <string name="registro_consulta_txt_ayuda_medicamento">Selecciona el Medicamento</string>
    <string name="registro_consulta_txt_mascota_defecto">Desconocida</string>
    <string name="registro_consulta_txt_veterinario_defecto">Desconocido</string>
    <!-- Strings para activity_registro_consulta.xml Fin -->


    <!-- Strings para activity_listado_consulta.xml Inicio -->
    <string name="listado_consulta_toast_error">No se pudo conectar con la base de datos</string>
    <string name="listado_consulta_toast_cargando">Cargando&#8230;</string>
    <!-- String para activity_listado_consulta.xml Fin -->


    <!-- Strings para item_mascota.xml Inicio -->
    <string name="item_mascota_txt_nombre">Nombre:</string>
    <string name="item_mascota_txt_sexo">Sexo:</string>
    <string name="item_mascota_txt_fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="item_mascota_txt_padre">Padre:</string>
    <string name="item_mascota_txt_madre">Madre:</string>
    <string name="item_mascota_txt_especie">Especie:</string>
    <string name="item_mascota_txt_raza">Raza:</string>
    <string name="item_mascota_txt_dueno_actual">Dueño Actual:</string>
    <!-- Strings para item_mascota.xml Fin -->


    <!-- Strings para item_veterinario.xml Inicio -->
    <string name="item_veterinario_txt_nombre">Nombre:</string>
    <string name="item_veterinario_txt_documento">Número de Documento:</string>
    <string name="item_veterinario_txt_direccion">Dirección:</string>
    <string name="item_veterinario_txt_telefono">Teléfono:</string>
    <string name="item_veterinario_txt_registro_profesional">Número de Registro Profesional:
    </string>
    <string name="item_veterinario_txt_especialidad">Especialidades:</string>
    <string name="item_veterinario_txt_consultas_realizadas">Consultas Realizadas:</string>
    <!-- Strings para item_veterinario.xml Fin -->


    <!-- Strings para item_consulta.xml Inicio -->
    <string name="item_consulta_txt_codigo">Código:</string>
    <string name="item_consulta_txt_mascota">Mascota Atendida:</string>
    <string name="item_consulta_txt_fecha">Fecha:</string>
    <string name="item_consulta_txt_motivo">Motivo:</string>
    <string name="item_consulta_txt_examenes">Exámenes Físicos:</string>
    <string name="item_consulta_txt_veterinario">Veterinario:</string>
    <string name="item_consulta_txt_patologia">Patología:</string>
    <string name="item_consulta_txt_enfermedad_cronica">Enfermedad Crónica:</string>
    <string name="item_consulta_txt_tratamiento">Tratamiento:</string>
    <!-- Strings para item_veterinario.xml Fin -->


</resources>