<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutRaizItems">

    <LinearLayout style="@style/LinearLayoutsHorizontalesItems">

        <TextView
            style="@style/TituloItems"
            android:text="@string/item_veterinario_txt_nombre" />

        <TextView
            android:id="@+id/txt_nombre_veterinario"
            style="@style/TituloItems"
            android:layout_marginLeft="@dimen/margen_medio"
            tools:text="David R. Auza" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutsHorizontalesItems">

        <TextView
            style="@style/TextoAyudaItems"
            android:text="@string/item_veterinario_txt_tarjeta_profesional" />

        <TextView
            android:id="@+id/txt_registro_profesional_veterinario"
            style="@style/TextoContenidoItems"
            tools:text="0-987-654-321" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutsHorizontalesItems">

        <TextView
            style="@style/TextoAyudaItems"
            android:text="@string/item_veterinario_txt_especialidad" />

        <TextView
            android:id="@+id/txt_especialidad_veterinario"
            style="@style/TextoContenidoItems"
            tools:text="Cirugía Canina" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutsHorizontalesItems">

        <TextView
            style="@style/TextoAyudaItems"
            android:text="@string/item_veterinario_txt_consultas_realizadas" />

        <TextView
            android:id="@+id/txt_consultas_realizadas_veterinario"
            style="@style/TextoContenidoItems"
            tools:text="2" />

    </LinearLayout>

    <View style="@style/LineasDivisionItems" />

</LinearLayout>